--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .icon {
+    @apply text-default-text text-2xl md:text-5xl;
+  }
+  .btn {
+    @apply bg-green-accent hover:bg-green-accent-hover text-nav block w-full cursor-pointer rounded-md px-4 py-2 text-center font-bold uppercase tracking-wider transition-colors hover:no-underline;
+  }
+}
