--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1,
+  h2,
+  h3,
+  h4 {
+    @apply font-bold;
+  }
+
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+
+  p {
+    @apply text-default-text text-sm;
+  }
+}
+
 @layer components {
   .icon {
     @apply text-default-text text-2xl md:text-5xl;
+  }
+  .small-icon {
+    @apply text-default-text text-xl md:text-3xl;
   }
   .btn {
     @apply bg-green-accent hover:bg-green-accent-hover text-nav block w-full cursor-pointer rounded-md px-4 py-2 text-center font-bold uppercase tracking-wider transition-colors hover:no-underline;
